Finish Post Tree Method
